--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "host": "vite --host"
+    "host": "vite --host",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://bcjohnblue.github.io/threejs-polygonOffset/",
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "vite": "^4.2.0",
     "vite-plugin-glsl": "^1.3.1"
   },
